# crust

./: CLAUDE.md  Cargo.toml  README.md
examples/: demo.rs
src/: cursor.rs  input.rs  lib.rs  pane.rs  popup.rs  style.rs  text.rs
