[package]
name = "fe2o3-crust"
version = "0.1.19"
edition = "2021"
authors = ["Geir Isene <g@isene.com>"]
description = "Rust TUI library with pane management, ANSI colors, scrolling, and input handling. Feature clone of rcurses."
license = "Unlicense"
repository = "https://github.com/isene/crust"
keywords = ["tui", "terminal", "pane", "ansi", "curses"]
categories = ["command-line-interface"]

[lib]
name = "crust"

[dependencies]
crossterm = "0.28"
unicode-width = "0.2"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
